// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mobile Results Dropdown Works 1`] = `
<div
  class="flex-grow h-full w-full bg-white"
  wide=""
>
  <header
    class="text-gray-900 bg-white"
  >
    <div
      class="max-w-screen-xl px-6 pb-6 mx-auto lg:px-8 pt-3 md:pt-6"
    >
      <h1
        class="text-3xl font-bold leading-tight font-heading"
      >
        <router-link-stub
          class="text-xl text-main-700 md:text-3xl"
          to="/leagues/"
        >
          
        
      
        </router-link-stub>
         
        <span
          class="hidden ml-2 mr-3 md:inline-block"
        >
          -
        </span>
         
        <span
          class="block text-3xl md:inline-block"
        >
          
        
        </span>
      </h1>
    </div>
  </header>
   
  <main>
    <div
      class="bg-white"
    >
      <div
        class="max-w-screen-xl pb-8 mx-auto sm:px-6 lg:px-8"
      >
        <div
          class="px-6 sm:px-0"
        >
          <details
            class="transition-all duration-300 bg-white shadow-md outline-none appearance-none select-none rounded-shape-xl focus:shadow-lg col-span-2"
          >
            <summary
              class="transition-all duration-300 outline-none appearance-none select-none rounded-shape-xl"
            >
              <h2
                class="inline-block px-6 pt-3 pb-2 text-2xl select-none font-heading text-main-700"
              >
                
      Filter Results
    
              </h2>
               
              <svg
                class="float-right h-12 p-2 mt-1 mr-2 transition-all duration-300 ease-in-out fill-current rotate text-main-600"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
                 
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
              </svg>
            </summary>
             
            <section
              class="px-6 pt-2 pb-4 transition-all duration-300"
            >
              <div
                class="grid w-full grid-cols-2 gap-4 md:grid-cols-4"
              >
                <div
                  class="col-span-2"
                >
                  <label
                    class="block pb-1 text-gray-600 select-none font-heading"
                    for="Name:"
                  >
                    Name:
                  </label>
                   
                  <input
                    class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                    id="Name:"
                    type="text"
                  />
                </div>
                 
                <div
                  class="col-span-2"
                >
                  <label
                    class="block pb-1 text-gray-600 select-none font-heading"
                    for="Club:"
                  >
                    Club:
                  </label>
                   
                  <input
                    class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                    id="Club:"
                    type="text"
                  />
                </div>
                 
                <div
                  class="col-span-1"
                >
                  <label
                    class="block pb-1 text-gray-600 select-none font-heading"
                    for="Min Age:"
                  >
                    Min Age:
                  </label>
                   
                  <input
                    class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                    id="Min Age:"
                    max="120"
                    min="0"
                    type="number"
                  />
                </div>
                 
                <div
                  class="col-span-1"
                >
                  <label
                    class="block pb-1 text-gray-600 select-none font-heading"
                    for="Max Age:"
                  >
                    Max Age:
                  </label>
                   
                  <input
                    class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                    id="Max Age:"
                    max="120"
                    min="0"
                    type="number"
                  />
                </div>
                 
                <div
                  class="flex flex-col items-center justify-center col-span-1 pt-2 pb-2 text-center md:pt-4 md:pb-0"
                >
                  <label
                    class="relative flex flex-row items-center select-none"
                  >
                    <svg
                      class="absolute left-0 w-5 h-5 text-white"
                      fill="currentColor"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z"
                      />
                    </svg>
                     
                    <input
                      class="flex-shrink-0 inline-block w-5 h-5 align-middle transition duration-300 ease-in-out bg-white border outline-none appearance-none text-main-500 rounded-shape focus:shadow-outline focus:border-main-400 checked:bg-main-400 checked:border-main-400"
                      type="checkbox"
                    />
                     
                    <span
                      class="ml-3 leading-tight text-gray-600 font-heading"
                    >
                      Male
                    </span>
                  </label>
                </div>
                 
                <div
                  class="flex flex-col items-center justify-center col-span-1 pt-2 pb-2 md:pt-4 md:pb-0text-center"
                >
                  <label
                    class="relative flex flex-row items-center select-none"
                  >
                    <svg
                      class="absolute left-0 w-5 h-5 text-white"
                      fill="currentColor"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z"
                      />
                    </svg>
                     
                    <input
                      class="flex-shrink-0 inline-block w-5 h-5 align-middle transition duration-300 ease-in-out bg-white border outline-none appearance-none text-main-500 rounded-shape focus:shadow-outline focus:border-main-400 checked:bg-main-400 checked:border-main-400"
                      type="checkbox"
                    />
                     
                    <span
                      class="ml-3 leading-tight text-gray-600 font-heading"
                    >
                      Female
                    </span>
                  </label>
                </div>
              </div>
            </section>
          </details>
        </div>
      </div>
    </div>
     
    <div
      class="w-full"
    >
      <div
        class="w-full col-span-2 px-6 mx-auto lg:px-8 max-w-screen-xl"
        style=""
      >
        <table
          class="table"
        >
          <thead>
            <tr>
              <th
                class="position"
              >
                <p>
                  Pos.
                </p>
                 
                <div
                  class="up-down-arrow"
                >
                  <svg
                    class="inline-block transition-all duration-300 text-main-900 h-2 -mt-2"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                  </svg>
                   
                  <svg
                    class="inline-block -ml-2 transition-all duration-300 text-main-900 h-5 -mt-1"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                  </svg>
                </div>
              </th>
               
              <th
                class="name"
              >
                <p>
                  Name
                </p>
                 
                <div
                  class="up-down-arrow"
                >
                  <svg
                    class="inline-block transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                  </svg>
                   
                  <svg
                    class="inline-block -ml-2 transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                  </svg>
                </div>
              </th>
               
              <th
                class="ageClass"
              >
                <p>
                  Class
                </p>
                 
                <div
                  class="up-down-arrow"
                >
                  <svg
                    class="inline-block transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                  </svg>
                   
                  <svg
                    class="inline-block -ml-2 transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                  </svg>
                </div>
              </th>
               
              <th
                class="club"
              >
                <p>
                  Club
                </p>
                 
                <div
                  class="up-down-arrow"
                >
                  <svg
                    class="inline-block transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                  </svg>
                   
                  <svg
                    class="inline-block -ml-2 transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                  </svg>
                </div>
              </th>
               
              <th
                class="totalPoints"
              >
                <p>
                  Points
                </p>
                 
                <div
                  class="up-down-arrow"
                >
                  <svg
                    class="inline-block transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                  </svg>
                   
                  <svg
                    class="inline-block -ml-2 transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                  </svg>
                </div>
              </th>
               
              <td />
            </tr>
          </thead>
           
          <tbody
            name="fade"
          >
            <tr
              class="normal-table-row striped"
            >
              <td
                class="position"
              >
                1
              </td>
               
              <td
                class="name"
              >
                <span
                  class="block font-normal sm:font-light"
                >
                  
                  Linda Reid
                
                </span>
                 
                <span
                  class="block text-xs sm:hidden"
                >
                  <span
                    class="mr-4"
                  >
                    W35
                  </span>
                   
                  <span>
                    ESOC
                  </span>
                </span>
              </td>
               
              <td
                class="ageClass"
              >
                W35
              </td>
               
              <td
                class="club"
              >
                ESOC
              </td>
               
              <td
                class="totalPoints"
              >
                100
              </td>
               
              <td
                class="arrow"
              >
                <svg
                  class="transition-all duration-300 transform fill-current text-main-700"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                   
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </td>
            </tr>
             
            <!---->
            <tr
              class="normal-table-row"
            >
              <td
                class="position"
              >
                2
              </td>
               
              <td
                class="name"
              >
                <span
                  class="block font-normal sm:font-light"
                >
                  
                  Harvey Blue
                
                </span>
                 
                <span
                  class="block text-xs sm:hidden"
                >
                  <span
                    class="mr-4"
                  >
                    M21
                  </span>
                   
                  <span>
                    INT
                  </span>
                </span>
              </td>
               
              <td
                class="ageClass"
              >
                M21
              </td>
               
              <td
                class="club"
              >
                INT
              </td>
               
              <td
                class="totalPoints"
              >
                99
              </td>
               
              <td
                class="arrow"
              >
                <svg
                  class="transition-all duration-300 transform fill-current text-main-700"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                   
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </td>
            </tr>
             
            <!---->
            <tr
              class="normal-table-row striped"
            >
              <td
                class="position"
              >
                3
              </td>
               
              <td
                class="name"
              >
                <span
                  class="block font-normal sm:font-light"
                >
                  
                  Bob Blu Jones
                
                </span>
                 
                <span
                  class="block text-xs sm:hidden"
                >
                  <span
                    class="mr-4"
                  >
                    M65
                  </span>
                   
                  <span>
                    ESOC
                  </span>
                </span>
              </td>
               
              <td
                class="ageClass"
              >
                M65
              </td>
               
              <td
                class="club"
              >
                ESOC
              </td>
               
              <td
                class="totalPoints"
              >
                98
              </td>
               
              <td
                class="arrow"
              >
                <svg
                  class="transition-all duration-300 transform fill-current text-main-700"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                   
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </td>
            </tr>
             
            <!---->
          </tbody>
        </table>
      </div>
    </div>
     
    <div
      class="max-w-screen-xl pb-8 mx-auto sm:pb-10 xl:pb-12 lg:px-8 sm:px-6 pt-6 sm:pt-8"
    >
      <div
        class="grid grid-cols-2 gap-6 px-6 sm:px-0 sm:gap-8"
      >
        <vue-headful-stub
          description="Results from the  course of the  league on Munro - League Results. Sorted. Sports League Results Calculated Quick and Easily, with Results Sorting and Filtering Options"
          head="[object Object]"
          title="Munro -  -  Results"
          url="https://munro-leagues.herokuapp.com/leagues//results/"
        />
            
        <!---->
         
        <!---->
      </div>
    </div>
  </main>
   
  <!---->
</div>
`;

exports[`Mobile Results Dropdown Works 2`] = `
<div
  class="flex-grow h-full w-full bg-white"
  wide=""
>
  <header
    class="text-gray-900 bg-white"
  >
    <div
      class="max-w-screen-xl px-6 pb-6 mx-auto lg:px-8 pt-3 md:pt-6"
    >
      <h1
        class="text-3xl font-bold leading-tight font-heading"
      >
        <router-link-stub
          class="text-xl text-main-700 md:text-3xl"
          to="/leagues/"
        >
          
        
      
        </router-link-stub>
         
        <span
          class="hidden ml-2 mr-3 md:inline-block"
        >
          -
        </span>
         
        <span
          class="block text-3xl md:inline-block"
        >
          
        
        </span>
      </h1>
    </div>
  </header>
   
  <main>
    <div
      class="bg-white"
    >
      <div
        class="max-w-screen-xl pb-8 mx-auto sm:px-6 lg:px-8"
      >
        <div
          class="px-6 sm:px-0"
        >
          <details
            class="transition-all duration-300 bg-white shadow-md outline-none appearance-none select-none rounded-shape-xl focus:shadow-lg col-span-2"
          >
            <summary
              class="transition-all duration-300 outline-none appearance-none select-none rounded-shape-xl"
            >
              <h2
                class="inline-block px-6 pt-3 pb-2 text-2xl select-none font-heading text-main-700"
              >
                
      Filter Results
    
              </h2>
               
              <svg
                class="float-right h-12 p-2 mt-1 mr-2 transition-all duration-300 ease-in-out fill-current rotate text-main-600"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
                 
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
              </svg>
            </summary>
             
            <section
              class="px-6 pt-2 pb-4 transition-all duration-300"
            >
              <div
                class="grid w-full grid-cols-2 gap-4 md:grid-cols-4"
              >
                <div
                  class="col-span-2"
                >
                  <label
                    class="block pb-1 text-gray-600 select-none font-heading"
                    for="Name:"
                  >
                    Name:
                  </label>
                   
                  <input
                    class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                    id="Name:"
                    type="text"
                  />
                </div>
                 
                <div
                  class="col-span-2"
                >
                  <label
                    class="block pb-1 text-gray-600 select-none font-heading"
                    for="Club:"
                  >
                    Club:
                  </label>
                   
                  <input
                    class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                    id="Club:"
                    type="text"
                  />
                </div>
                 
                <div
                  class="col-span-1"
                >
                  <label
                    class="block pb-1 text-gray-600 select-none font-heading"
                    for="Min Age:"
                  >
                    Min Age:
                  </label>
                   
                  <input
                    class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                    id="Min Age:"
                    max="120"
                    min="0"
                    type="number"
                  />
                </div>
                 
                <div
                  class="col-span-1"
                >
                  <label
                    class="block pb-1 text-gray-600 select-none font-heading"
                    for="Max Age:"
                  >
                    Max Age:
                  </label>
                   
                  <input
                    class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main"
                    id="Max Age:"
                    max="120"
                    min="0"
                    type="number"
                  />
                </div>
                 
                <div
                  class="flex flex-col items-center justify-center col-span-1 pt-2 pb-2 text-center md:pt-4 md:pb-0"
                >
                  <label
                    class="relative flex flex-row items-center select-none"
                  >
                    <svg
                      class="absolute left-0 w-5 h-5 text-white"
                      fill="currentColor"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z"
                      />
                    </svg>
                     
                    <input
                      class="flex-shrink-0 inline-block w-5 h-5 align-middle transition duration-300 ease-in-out bg-white border outline-none appearance-none text-main-500 rounded-shape focus:shadow-outline focus:border-main-400 checked:bg-main-400 checked:border-main-400"
                      type="checkbox"
                    />
                     
                    <span
                      class="ml-3 leading-tight text-gray-600 font-heading"
                    >
                      Male
                    </span>
                  </label>
                </div>
                 
                <div
                  class="flex flex-col items-center justify-center col-span-1 pt-2 pb-2 md:pt-4 md:pb-0text-center"
                >
                  <label
                    class="relative flex flex-row items-center select-none"
                  >
                    <svg
                      class="absolute left-0 w-5 h-5 text-white"
                      fill="currentColor"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.707 7.293a1 1 0 0 0-1.414 1.414l2 2a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L7 8.586 5.707 7.293z"
                      />
                    </svg>
                     
                    <input
                      class="flex-shrink-0 inline-block w-5 h-5 align-middle transition duration-300 ease-in-out bg-white border outline-none appearance-none text-main-500 rounded-shape focus:shadow-outline focus:border-main-400 checked:bg-main-400 checked:border-main-400"
                      type="checkbox"
                    />
                     
                    <span
                      class="ml-3 leading-tight text-gray-600 font-heading"
                    >
                      Female
                    </span>
                  </label>
                </div>
              </div>
            </section>
          </details>
        </div>
      </div>
    </div>
     
    <div
      class="w-full"
    >
      <div
        class="w-full col-span-2 px-6 mx-auto lg:px-8 max-w-screen-xl"
        style=""
      >
        <table
          class="table"
        >
          <thead>
            <tr>
              <th
                class="position"
              >
                <p>
                  Pos.
                </p>
                 
                <div
                  class="up-down-arrow"
                >
                  <svg
                    class="inline-block transition-all duration-300 text-main-900 h-2 -mt-2"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                  </svg>
                   
                  <svg
                    class="inline-block -ml-2 transition-all duration-300 text-main-900 h-5 -mt-1"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                  </svg>
                </div>
              </th>
               
              <th
                class="name"
              >
                <p>
                  Name
                </p>
                 
                <div
                  class="up-down-arrow"
                >
                  <svg
                    class="inline-block transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                  </svg>
                   
                  <svg
                    class="inline-block -ml-2 transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                  </svg>
                </div>
              </th>
               
              <th
                class="ageClass"
              >
                <p>
                  Class
                </p>
                 
                <div
                  class="up-down-arrow"
                >
                  <svg
                    class="inline-block transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                  </svg>
                   
                  <svg
                    class="inline-block -ml-2 transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                  </svg>
                </div>
              </th>
               
              <th
                class="club"
              >
                <p>
                  Club
                </p>
                 
                <div
                  class="up-down-arrow"
                >
                  <svg
                    class="inline-block transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                  </svg>
                   
                  <svg
                    class="inline-block -ml-2 transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                  </svg>
                </div>
              </th>
               
              <th
                class="totalPoints"
              >
                <p>
                  Points
                </p>
                 
                <div
                  class="up-down-arrow"
                >
                  <svg
                    class="inline-block transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="9"
                      y2="5"
                    />
                  </svg>
                   
                  <svg
                    class="inline-block -ml-2 transition-all duration-300 text-main-900 h-7/2 -mt-1 text-opacity-75"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      stroke="none"
                    />
                     
                    <line
                      x1="12"
                      x2="12"
                      y1="5"
                      y2="19"
                    />
                     
                    <line
                      x1="16"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                     
                    <line
                      x1="8"
                      x2="12"
                      y1="15"
                      y2="19"
                    />
                  </svg>
                </div>
              </th>
               
              <td />
            </tr>
          </thead>
           
          <tbody
            name="fade"
          >
            <tr
              class="normal-table-row striped"
            >
              <td
                class="position"
              >
                1
              </td>
               
              <td
                class="name"
              >
                <span
                  class="block font-normal sm:font-light"
                >
                  
                  Linda Reid
                
                </span>
                 
                <span
                  class="block text-xs sm:hidden"
                >
                  <span
                    class="mr-4"
                  >
                    W35
                  </span>
                   
                  <span>
                    ESOC
                  </span>
                </span>
              </td>
               
              <td
                class="ageClass"
              >
                W35
              </td>
               
              <td
                class="club"
              >
                ESOC
              </td>
               
              <td
                class="totalPoints"
              >
                100
              </td>
               
              <td
                class="arrow"
              >
                <svg
                  class="transition-all duration-300 transform fill-current text-main-700"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                   
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </td>
            </tr>
             
            <!---->
            <tr
              class="normal-table-row"
            >
              <td
                class="position"
              >
                2
              </td>
               
              <td
                class="name"
              >
                <span
                  class="block font-normal sm:font-light"
                >
                  
                  Harvey Blue
                
                </span>
                 
                <span
                  class="block text-xs sm:hidden"
                >
                  <span
                    class="mr-4"
                  >
                    M21
                  </span>
                   
                  <span>
                    INT
                  </span>
                </span>
              </td>
               
              <td
                class="ageClass"
              >
                M21
              </td>
               
              <td
                class="club"
              >
                INT
              </td>
               
              <td
                class="totalPoints"
              >
                99
              </td>
               
              <td
                class="arrow"
              >
                <svg
                  class="transition-all duration-300 transform fill-current text-main-700 rotate-180"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                   
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </td>
            </tr>
             
            <tr
              class="mobile-table-expansion"
            >
              <td
                colspan="100%"
              >
                <p>
                  
                  200m:
                  
                  <span
                    class="strikethrough"
                  >
                    
                  </span>
                </p>
                <p>
                  
                  Longniddry:
                  
                  <span
                    class=""
                  >
                    100
                  </span>
                </p>
                <p>
                  
                  South Edinburgh:
                  
                  <span
                    class="strikethrough"
                  >
                    5
                  </span>
                </p>
              </td>
            </tr>
            <tr
              class="normal-table-row striped"
            >
              <td
                class="position"
              >
                3
              </td>
               
              <td
                class="name"
              >
                <span
                  class="block font-normal sm:font-light"
                >
                  
                  Bob Blu Jones
                
                </span>
                 
                <span
                  class="block text-xs sm:hidden"
                >
                  <span
                    class="mr-4"
                  >
                    M65
                  </span>
                   
                  <span>
                    ESOC
                  </span>
                </span>
              </td>
               
              <td
                class="ageClass"
              >
                M65
              </td>
               
              <td
                class="club"
              >
                ESOC
              </td>
               
              <td
                class="totalPoints"
              >
                98
              </td>
               
              <td
                class="arrow"
              >
                <svg
                  class="transition-all duration-300 transform fill-current text-main-700"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                   
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </td>
            </tr>
             
            <!---->
          </tbody>
        </table>
      </div>
    </div>
     
    <div
      class="max-w-screen-xl pb-8 mx-auto sm:pb-10 xl:pb-12 lg:px-8 sm:px-6 pt-6 sm:pt-8"
    >
      <div
        class="grid grid-cols-2 gap-6 px-6 sm:px-0 sm:gap-8"
      >
        <vue-headful-stub
          description="Results from the  course of the  league on Munro - League Results. Sorted. Sports League Results Calculated Quick and Easily, with Results Sorting and Filtering Options"
          head="[object Object]"
          title="Munro -  -  Results"
          url="https://munro-leagues.herokuapp.com/leagues//results/"
        />
            
        <!---->
         
        <!---->
      </div>
    </div>
  </main>
   
  <!---->
</div>
`;

exports[`Renders Correctly + Fetches Data 1`] = `
<layout-stub
  class="w-full"
  hasmobilesubtitle="true"
  title=""
  wide=""
>
  <vue-headful-stub
    description="Results from the  course of the  league on Munro - League Results. Sorted. Sports League Results Calculated Quick and Easily, with Results Sorting and Filtering Options"
    head="[object Object]"
    title="Munro -  -  Results"
    url="https://munro-leagues.herokuapp.com/leagues//results/"
  />
      
  <!---->
   
  <div
    class="col-span-2 card"
  >
    <h2
      class="text-2xl font-bold font-heading"
    >
      Results for Other Courses
    </h2>
     
    <div>
      <router-link-stub
        class="button"
        to="/leagues//results/Long"
      >
        Long
      </router-link-stub>
      <router-link-stub
        class="button"
        to="/leagues//results/Short"
      >
        Short
      </router-link-stub>
    </div>
  </div>
</layout-stub>
`;
